<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_destination"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/nearby_destination"
        android:icon="@drawable/ic_nearby_black_24dp"
        android:title="@string/nearby" />

    <item
        android:id="@+id/add_destination"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/add" />

    <item
        android:id="@+id/favorites_destination"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favorites" />

    <item
        android:id="@+id/search_destination"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search" />
</menu>